# aos-pet

./: .gitattributes  .gitignore  AUTHORING.md  CHANGELOG.md  Capsule.toml  Cargo.toml  DESIGN.md  LICENSE  PLAN.md  README.md
overlay/: README.md  index.html  package-lock.json  package.json  pet-overlay.cmd  vite.config.ts
overlay/electron/: main.cjs  preload.cjs
overlay/src/: main.ts
overlay/src/core/: api.ts  emotion.test.ts  emotion.ts  walker.test.ts  walker.ts
overlay/src/render/: widgets.ts
src/: ailment.rs  art.rs  battle.rs  behaviour.rs  config.rs  decay.rs  economy.rs  game.rs  lib.rs  model.rs  moment.rs  mood.rs  render.rs
tools/: pet.py  test_bridge.py
